# apollo

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  Makefile  README.md  apollo-cli.py  backend_mock_data.patch  build.rs  requests.fish  tailwind.css
.docs/: dioxus.md
.github/workflows/: ci-cd.yml  text.yml
assets/: dx-components-theme.css  main.css  tailwind.css  translations.yml
assets/i18n/: en-US.ftl  hu-HU.ftl
src/: app.rs  backend.rs  main.rs  routes.rs
src/app/: actions.rs  admin.rs  home.rs  hooks.rs  models.rs  utils.rs
src/app/components/: mod.rs  tailwind_constants.rs
src/app/components/admin/: admin.rs
src/app/components/alert_dialog/: style.css
src/app/components/general/: general.rs  mod.rs
src/app/components/home/: home.rs  input_section.rs  mod.rs  score_table.rs  team_section.rs  team_status.rs
src/app/components/loading/: loading.rs  mod.rs
src/app/components/toast/: style.css
src/app/home/: actions.rs  hooks.rs  models.rs  utils.rs
src/backend/: endpoints.rs  i18n.rs  logic.rs  models.rs
src/components/: input_section.rs  message_popup.rs  mod.rs  score_table.rs  tailwind_constants.rs  team_section.rs
src/components/select/: style.css
