[package]
name = "apollo"
version = "0.1.0"
authors = ["csboo <csongiboo@gmail.com>", "Jeromos Kovacs <iitsnotme214@proton.me>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.4.0"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }
ciborium = { version = "0.2.2", optional = true }
dioxus = { version = "0.7.2", features = ["fullstack"] }
# note: argon2 crate worth bearing in mind
rust-argon2 = { version = "3.0.0", optional = true }
secrecy = { version = "0.10.3", optional = true }
tokio = { version = "1.48.0", optional = true }
uuid = { version = "1.19.0", features = ["v4", "serde"], optional = true }

[features]
default = ["web"]
web = ["dioxus/web", "dep:gloo-timers"]
desktop = ["dioxus/desktop", "dep:tokio"]
# mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:tokio", "dep:secrecy", "dep:uuid"]
# save server state
server_state_save = ["server", "dep:ciborium", "dep:chacha20poly1305", "dep:rust-argon2"]
