[package]
name = "apollo"
version = "0.1.0"
authors = [
  "csboo <csongiboo@gmail.com>",
  "Jeromos Kovacs <iitsnotme214@proton.me>"
]
description = "a simple hackathon progress tracking app"
repository = "https://github.com/csboo/apollo"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = { version = "0.10.1", optional = true }
ciborium = { version = "0.2.2", optional = true }
dioxus = { version = "0.7.5", features = ["fullstack"] }
# NOTE: matches the version of `chacha20poly1305`
rand_core = { version = "0.6.4", features = ["std"], optional = true }
# NOTE: argon2 crate worth bearing in mind <https://github.com/csboo/apollo/issues/36>
rust-argon2 = { version = "3.0.0", optional = true }
tokio = { version = "1.51.1", optional = true }
uuid = { version = "1.23.0", features = ["v4", "serde"], optional = true }
zeroize = { version = "1.8.2", optional = true }

[features]
default = []
web = ["dioxus/web"]
# desktop = ["dioxus/desktop"]
# mobile = ["dioxus/mobile"]
server = [
  "dioxus/server",
  "dep:tokio",
  "dep:zeroize",
  "dep:uuid",
  "dep:rand_core",
  "dep:rust-argon2"
]
# save server state
server_state_save = ["server", "dep:chacha20poly1305", "dep:ciborium"]

[build-dependencies]
humantime = "2.3.0"
